# sysdig-cli

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: api-landscape-analysis.md  wisdom-googleworkspace-cli.md
prompts/: benchmark-results-2026-03-16T18-41-25Z.json  benchmark-results-2026-03-16T18-41-25Z.md  benchmark-results-2026-03-16T18-43-29Z.json  benchmark-results-2026-03-16T18-43-29Z.md  benchmark-results-2026-03-16T18-48-34Z.json  benchmark-results-2026-03-16T18-48-34Z.md  benchmark-results-2026-03-16T18-52-15Z.json  benchmark-results-2026-03-16T18-52-15Z.md  benchmark-results-2026-03-16T19-36-54Z.json  benchmark-results-2026-03-16T19-36-54Z.md  benchmark_api_vs_cli.py  step1-gws-wisdom-extraction.md  step2-api-landscape.md  step3-build.md  step4-use-cases.md  step5-testing.md  step6-dynamic-testing.md
sysdig_cli/: __init__.py  auth.py  client.py  commands.py  formatter.py  main.py  paginator.py  schema_cmd.py  spec.py  timestamps.py  validator.py
sysdig_cli/assets/: openapi.json
sysdig_cli/helpers/: __init__.py  alerts.py  audit.py  captures.py  cost.py  events.py  iam.py  sysql.py  (+3 more)
tests/: conftest.py  test_auth.py  test_bugfixes.py  test_client.py  test_commands.py  test_comprehensive.py  test_core_modules.py  test_events_audit_iam.py  test_formatter.py  test_formatter_comprehensive.py  test_gaps_client_captures_auth.py  test_gaps_thin_coverage.py  test_gaps_vulns_timestamps_spec.py  test_helpers.py  test_integration.py  test_misc_helpers.py  test_new_helpers.py  test_paginator.py  test_security.py  test_validator.py  test_vulns_comprehensive.py
